# os

./: README.md
coursework/qsniffer/: qsniffer.pro
coursework/qsniffer/include/: mainwindow.h  packetdata.h  packetsniffer.h
coursework/qsniffer/resources/: resources.qrc
coursework/qsniffer/src/: main.cpp  mainwindow.cpp  packetsniffer.cpp
coursework/reports/: Терновский.docx  Терновский.odt
lab1/: CMakeLists.txt
lab1/include/: grade-map.h  keyread.h  person.h  utils.h
lab1/src/: main.c
lab1/src/grade-convert/: gradeToString.c  stringToGrade.c
lab1/src/keyreader/: getch.c
lab1/src/list/: addNode.c  deleteById.c  deleteHead.c  initList.c  printList.c  searchByFirstname.c  searchByGrade.c
lab1/src/utils/: instruction.c
lab10/: Makefile  example1.cpp  example2.cpp  example3.cpp  example4.cpp  script.sh
lab10/include/: modified_peterson_mutex.h  peterson_mutex.h
lab10/src/: modified_peterson_mutex.cpp  peterson_mutex.cpp
lab11/: Makefile
lab11/src/: end_buffer.c  ring_buffer.c
lab12/: Makefile
lab12/src/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp
lab3/: CMakeLists.txt  excercise2.c  excercise3.c  temp.c
lab4/: hello-world.c  main.c
lab5/: Makefile
lab5/include/: grade-functions.h  grades.h  list.h  utils.h
lab6/: script.sh
lab7/: Makefile
lab7/include/: functions-pointers.h  grade-convert.h  grades.h  list.h  person.h  utils.h
lab8/: lab8_parallel.c  lab8_parallel.cpp  lab8_sequential.cpp  script.sh
lab9/: Makefile  main.cpp
(+16 files in other folders)
